--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -87,8 +87,9 @@ site_status_msg = get_site_status_msg(course_id)
     <ol class="user">
       <li class="primary">
         <a href="${reverse('dashboard')}" class="user-link">
-          <span class="sr">${_("Dashboard for:")}</span>
-          <div>
+	  <i class="icon fa fa-home" aria-hidden="true"></i>
+          <span class="sr">${_("Dashboard for:")}</span>          
+	  <div>
           ${user.username}
           </div>
         </a>
