View Course button UI issue solved.

--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -387,7 +387,7 @@ header.global .primary > a {
 // View on the course view page
 //------------------
 div.course-actions > a.enter-course {
-    background-color: $ms-color !important;
+    background-color: $ms-color;
 }
 
 div.course-actions > a.enter-course:hover {
