Some css changes with Satya

--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -348,7 +348,7 @@ div.main-cta > a.register:hover {
 
 // The user dropdown menu on the right hand side
 header.global .user a.user-link{
-    padding:5px 12px 10px 10px;
+    padding:5px 12px 10px 10px !important;
     position:relative;
     text-transform:none;
     font-size:14px;
@@ -371,6 +371,10 @@ header.global .user .dropdown-menu li>a:hover,header.global .user .dropdown-menu
     font-weight: 500 !important;
 }
 
+.dashboard .profile-sidebar {
+    border-top: none !important;
+}
+
 header.global .user a.user-link .icon {
     display: inline-block;
     float: left;
@@ -380,7 +384,21 @@ header.global .user a.user-link .icon {
 }
 
 header.global .primary > a {
-    color:$main-color !important;
+    color: $main-color !important;
+}
+
+header.global .user .user-dropdown {
+    border: 1px solid $ms-color;
+    border-left-color: none !important;
+}
+
+header.global .user .dropdown {
+    background-color: $ms-color !important;
+}
+
+/*media all*/
+header.global .user > :last-child.primary > a {
+    padding: 5px 8px 11px 10px;
 }
 
 //------------------
