--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -13,26 +13,18 @@
     <div class="colophon">
       <nav class="nav-colophon">
         <ol>
-          <li><a href="${reverse('about')}">About</a></li>
-          <li><a href="${reverse('about')}#careers">Careers</a></li>
-          <li><a href="${reverse('about')}#contact">Contact</a></li>
-          <li><a href="${reverse('tos')}">Terms of Service</a></li>
-          <li><a href="${reverse('tos')}#privacy">Privacy Policy</a></li>
-          <li><a href="${reverse('tos')}#honor">Honor Code</a></li>
-          <li><a href="${reverse('tos')}#copyright">Copyright</a></li>
-        </ol>
-      </nav>
-    </div>
-    <div class="references">
-      <span>Built on <a href="http://code.edx.org">OpenEdX</a>.</span>
-    </div>
-
-    <div class="copyright">
-        <p><span>
-            ${_('Copyright {year}. All rights reserved.').format(
+	<li>
+            ${_('&copy; {year} Microsoft').format(
                 year=date.today().year
             )}
-        </span></p>
+        </li>
+        <li><a href="https://www.microsoft.com/en-us/privacystatement/default.aspx">Privacy & Cookies</a></li>
+        <li><a href="${reverse('tos')}">Terms of use</a></li>
+        <li><a href="https://www.microsoft.com/en-us/legal/intellectualproperty/trademarks/en-us.aspx">Trademarks</a></li> 
+        </ol>      </nav>
+    </div>
+    <div class="references">
+	<a href="http://openedx.org"><img src="https://files.edx.org/openedx-logos/edx-openedx-logo-tag.png" width="140" alt="Powered by Open edX" /></a>
     </div>
   </footer>
 </div>
